--- a/rpi4b/Makefile
+++ b/rpi4b/Makefile
@@ -10,7 +10,7 @@ all: kernel rootfs mksdcardimg
 
 cleanall:
 	cd linux; \
-	sudo make ARCH=arm clean
+	sudo make mrproper
 	sudo lb clean --purge
 	\rm -rf config
 	\rm -rf config linaro-rootfs.img
@@ -51,7 +51,6 @@ prebuild:
 
 buildrootfs:
 	\cp -rf $(PWD)/../customization/* config/
-	\cp $(PWD)/../linaro-list-armhf config/package-lists/linaro.list.chroot
 	sudo lb build
 
 postbuild:
@@ -65,7 +64,7 @@ kernel: buildkernel postbuildkernel
 buildkernel:
 	cd linux; \
 	cp ../patches/bcm2711_defconfig arch/arm/configs/; \
-	make ARCH=arm clean; \
+	sudo make mrproper; \
 	make ARCH=arm bcm2711_defconfig; \
 	make ARCH=arm all -j4; \
 	sudo make ARCH=arm INSTALL_MOD_PATH=./tmp modules_install
